perf/istio/destination-rule-sidecar/dest-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: default
spec:
  host: reviews.withsidecar.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v2
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v2
